# Data-Structure-in-C

./: .gitignore  Data-Structure-in-C.slnx  LinkedList.slnx
CircularLinkedList/: .gitignore  CMakeLists.txt  CircularLinkedList.vcxproj  README.md  circularlinkedlist.c  circularlinkedlist.h  main.c
DoublyCircularLinkedList/: .gitignore  CMakeLists.txt  README.md
DoublyCircularLinkedList/implemetation/: doubly_circular_list.c
DoublyCircularLinkedList/include/: doubly_circular_list.h
DoublyCircularLinkedList/src/: main.c
DoublyLinkedList/: .gitignore  DoublyLinkedList.vcxproj  DoublyLinkedList.vcxproj.filters  doublylinkedlist.c  doublylinkedlist.h  main.c
SinglyLinkedList/: MyCProject.vcxproj  MyCProject.vcxproj.filters  README.md  linkedlist.h  linkedlistimpl.c  main.c
